# Gateway

./: .env.example  .gitignore  Dockerfile  README.md  build.gradle  jest.config.cjs  package-lock.json  package.json  pyproject.toml  tsconfig.spec.json
app/: __init__.py  main.py
app/domain/test/controller/: test_controller.py
app/domain/test/dependencies/: test_dependencies.py
app/domain/test/dto/: test_dto.py
app/domain/test/service/: test_service.py
app/resources/: __init__.py  config.py
src/: app.module.ts  main.ts
src/domain/admin/code/: admin.status.ts
src/domain/admin/controller/: admin.controller.ts
src/domain/admin/dao/: active-api-key.dao.ts  admin-log.dao.ts  department.dao.ts  policy.dao.ts
src/domain/admin/data/: admin.data.ts
src/domain/admin/dto/: admin.request.dto.ts  admin.response.dto.ts
src/domain/admin/exception/: admin.exception.ts
src/domain/admin/mapper/: admin.mapper.ts
src/domain/admin/module/: admin.module.ts
src/domain/admin/service/: admin.service.ts
src/domain/auth/code/: auth.status.ts
src/domain/auth/controller/: auth.controller.ts
src/domain/auth/dto/: auth.request.dto.ts  auth.response.dto.ts
src/domain/auth/exception/: auth.exception.ts
src/domain/auth/mapper/: auth.mapper.ts
src/domain/auth/module/: auth.module.ts
src/global/config/: swagger.config.ts  swagger.response.ts
src/global/data/: offset-page.data.ts
src/main/resources/: application.yml
test/api/: auth-admin.api.spec.ts  auth-refresh.api.spec.ts  prompt-analyze.api.spec.ts
tests/: test_app.py
(+76 files in other folders)
